[package]
name = "conllu"
version = "0.3.1"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Readers/writers for the CoNLL-U dependency format"
documentation = "https://docs.rs/conllu/"
homepage = "https://github.com/danieldk/conllu"
repository = "https://github.com/danieldk/conllu"
license = "Apache-2.0"
readme = "README.md"
exclude = [
  ".gitignore",
  ".travis.yml"
]

[dependencies]
itertools = "0.8"
petgraph = "0.4"
thiserror = "1"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
pretty_assertions = "0.6"
quickcheck = "0.9"
