[package]
name = "conllu"
version = "0.6.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Readers/writers for the CoNLL-U dependency format"
documentation = "https://docs.rs/udgraph/"
homepage = "https://github.com/danieldk/udgraph"
repository = "https://github.com/danieldk/udgraph"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
itertools = "0.9"
thiserror = "1"
udgraph = { path = "../udgraph", version = "0.6" }

[dev-dependencies]
lazy_static = "1"
maplit = "1"