[package]
name = "conllu"
version = "0.7.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Readers/writers for the CoNLL-U dependency format"
documentation = "https://docs.rs/udgraph/"
homepage = "https://github.com/danieldk/udgraph"
repository = "https://github.com/danieldk/udgraph"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10"
thiserror = "1"
udgraph = { path = "../udgraph", version = "0.7" }

[dev-dependencies]
lazy_static = "1"
maplit = "1"