[package]
name = "udgraph"
version = "0.7.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Universal dependency graphs"
documentation = "https://docs.rs/udgraph/"
homepage = "https://github.com/danieldk/udgraph"
repository = "https://github.com/danieldk/udgraph"
license = "MIT OR Apache-2.0"

[dependencies]
petgraph = { version = "0.6", default-features = false }
thiserror = "1"

[dev-dependencies]
lazy_static = "1"
maplit = "1"